Add unit tests for Reporter, Scanner, and ValidationClient modules
- Implemented comprehensive unit tests for the Console, JSON, and SARIF reporters to ensure correct functionality and output formatting.
- Added unit tests for the PatternScanner, covering various secret patterns and file operations.
- Created unit tests for the ValidationClient, including validation logic and error handling.
- Introduced tests for the SecretCandidate and ValidationStats dataclasses to verify their behavior and state management.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,6 @@
         "**/node_modules": true,
         "**/.git": true,
         "**/__pycache__": true
-    }
+    },
+    "chat.agent.maxRequests": 500
 }
