--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "structlog>=24.0.0",
     "gitpython>=3.1.0",
+    "pydriller>=2.6.0",
 ]
 
 [project.optional-dependencies]
